fix: flex-wrap of lists on mobile

--- a/style.scss
+++ b/style.scss
@@ -25,6 +25,10 @@ body {
   font-size: 1.6rem;
 }
 
+svg:not(:root) {
+  overflow: hidden;
+}
+
 // Variables
 :root {
   --main-color: #ffffff;
@@ -116,18 +120,37 @@ body {
   display: block;
 }
 
-
 // Details section
 .details {
   display: grid;
   padding: 1.6rem 0;
+  .mini-nav {
+    border-bottom: 1px solid #d1d5da;
+    overflow-x: scroll;
+    svg {
+      fill: rgb(106, 115, 125);
+    }
+    &__menu {
+      list-style: none;
+      display: flex;
+      width: 100%;
+    }
+    &__list {}
+    &__item {
+      text-decoration: none;
+      display: flex;
+      align-items: center;
+      column-gap: .5rem;
+    }
+  }
   &__left {
     margin-bottom: 2.4rem;
   }
   &__avatar {
     display: flex;
     align-items: center;
-    column-gap: 2.5rem;
+    flex-wrap: wrap;
+    gap: 2.5rem;
     margin-bottom: 2.4rem;
   }
   &__image {
@@ -191,6 +214,7 @@ body {
   &__stats {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     column-gap: 1rem;
     margin-bottom: 1.6rem;
     svg {
@@ -219,7 +243,7 @@ body {
 
 // Footer section
 .footer {
-  padding: 4rem;
+  padding: 4rem 0;
   border-top: 1px solid #e1e4e8;
   width: calc(100% - 3.2rem);
   margin: 0 auto;
